<resources>
    <string name="app_name">Reminisce</string>
    <string name="title_text">Reminisce Journal</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="or_text">Or</string>
    <string name="create_acct_text">CREATE ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="cardview_text">Demo App by Cheyne Quinter</string>
    <string name="title_activity_main_journal">MainJournalActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="thoughts">Your thoughts...</string>
    <string name="save_BTN">SAVE</string>
    <string name="post_title">Title</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon.</string>
</resources>